--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,2 +1,2 @@
-<%= javascript_pack_tag'application' %>
-<%= react_component("HelloWorld", { greeting:"Hello" }) %>
+<%=javascript_pack_tag "application" %>
+<%=react_component("App") %>
