--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,7 +31,6 @@
   width: 50%;
   margin: 0 auto;
   height: 30vh;
-  background-color: #40c23c;
 }
 
 .container p {
@@ -39,4 +38,8 @@
   border: 1px solid #facb80;
   padding: 0.5rem;
   text-align: center;
+}
+
+button {
+  cursor: pointer;
 }
